# WindowsMusicHotkeyMapper

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  config.example.json  release.sh
.github/workflows/: release.yml
src/: config.rs  main.rs  ui.rs
src/hotkey_listener/: linux.rs  mod.rs  windows.rs
src/media_control/: linux.rs  mod.rs  windows.rs
wix/: License.rtf  main.wxs
